--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -20,8 +20,17 @@ $fa-font-path: "../fonts/webfonts" !default;
     --secondaryBlue: #090E38;
     --color-cards: #232B5C;
 }
+/****home****/
+.carousel {
+    width: 100%;
+    max-height: 300px;
+  }
 
-
+  .carousel-inner img {
+    object-fit: contain;
+    max-height: 300px;
+  }
+////*****///
 .bg-footer{
     background-color: rgb(78, 77, 77);
 }
@@ -33,9 +42,7 @@ li{
 }
 a{
     text-decoration: none;
-    margin: 5px;
 }
-
     .jc-card {
       width: 100%;
       transition: all ease 0.4s;
@@ -62,8 +69,24 @@ a{
       }
       .jc-card img{
         width: 100%;
-        max-height: 300px;
+        max-height: 350px;
         border-radius: 10px;
         padding-top: 8px;
       }
+
+    /***button loadMore**/
+    .container {
+        overflow: hidden;
+    }
+
+    .row {
+        transition: height 0.3s;
+    }
+
+    .row.show-more {
+        height: auto;
+    }
+    .btn-shadow{
+        box-shadow: rgba(240, 46, 170, 0.4) 5px 5px ;
+    }
 
